# credit-risk-ml-framework

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: 01_credit_risk_classification.ipynb  02_risk_based_pricing.ipynb  03_neural_risk_scoring.ipynb
src/banking_ml/: __init__.py  evaluation.py  explainability.py  feature_engineering.py  models.py  pipelines.py  preprocessing.py  utils.py  visualization.py
tests/: conftest.py  test_explainability.py  test_feature_engineering.py  test_models.py  test_pipelines.py  test_preprocessing.py
